[gd_scene load_steps=30 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://wad/gfx/ring protection.png" type="Texture" id=2]
[ext_resource path="res://wad/gfx/guri_2_idle.png (1).png" type="Texture" id=3]
[ext_resource path="res://wad/gfx/guri_2_final clone-1.png.png" type="Texture" id=4]
[ext_resource path="res://wad/gfx/guri_2_final clone-2.png.png" type="Texture" id=5]
[ext_resource path="res://wad/gfx/guri_2_final clone-3.png.png" type="Texture" id=6]
[ext_resource path="res://wad/gfx/guri_costas_andando clone-1.png.png" type="Texture" id=7]
[ext_resource path="res://wad/gfx/guri_costas_andando clone-2.png.png" type="Texture" id=8]
[ext_resource path="res://wad/gfx/guri_lado direito_ andando-1.png.png" type="Texture" id=9]
[ext_resource path="res://wad/gfx/guri_lado direito_ andando-2.png.png" type="Texture" id=10]
[ext_resource path="res://wad/gfx/guri_lado esquerdo_ andando clone-1.png.png" type="Texture" id=11]
[ext_resource path="res://wad/gfx/guri_lado esquerdo_ andando clone-2.png.png" type="Texture" id=12]
[ext_resource path="res://wad/gfx/texture_progress_1.png" type="Texture" id=13]
[ext_resource path="res://scripts/health_bar.gd" type="Script" id=14]
[ext_resource path="res://wad/gfx/texture_progress_4.png" type="Texture" id=15]
[ext_resource path="res://scripts/ammo_bar.gd" type="Script" id=16]
[ext_resource path="res://wad/fonts/kenvector_future.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://wad/sfx/shot_1_correct.wav" type="AudioStream" id=18]
[ext_resource path="res://wad/sfx/player_hit.wav" type="AudioStream" id=19]

[sub_resource type="Animation" id=1]
resource_name = "hit_anim"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("animation_hit/hit_canvas:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "walk_front",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk_back",
"speed": 3.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "walk_right",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "walk_left",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 13.7163
height = 43.5326

[sub_resource type="CircleShape2D" id=5]
radius = 17.019

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 34.3825, 54.4727 )

[sub_resource type="DynamicFont" id=7]
size = 17
font_data = ExtResource( 17 )

[sub_resource type="Animation" id=8]
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("shield/shield_collision:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 3, 4.5, 4.9, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 8, 8 ), Vector2( 8, 8 ), Vector2( 8, 8 ), Vector2( 8, 8 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("enemies_backstep/enemies_backstep_collision:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 5, 5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=10]
radius = 23.064

[node name="player" type="KinematicBody2D"]
position = Vector2( 0, -0.583977 )
collision_layer = 4
collision_mask = 58
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ -0.255219, 41.4992, -40.3395, -77.0834, 79.9133, 116.657, -112.157, -155.582, 153.586, -188.985, 188.475, -224.059, 226.889, 263.476, -246.93, -253.925 ],
"_edit_vertical_guides_": [ -112.024, -238.848, 110.623, 228.975 ]
}

[node name="animation_hit" type="AnimationPlayer" parent="."]
anims/hit_anim = SubResource( 1 )

[node name="hit_canvas" type="CanvasModulate" parent="animation_hit"]

[node name="shield" type="StaticBody2D" parent="."]
editor/display_folded = true
position = Vector2( 0, -0.284792 )
collision_mask = 264

[node name="shield_collision" type="CollisionShape2D" parent="shield"]
shape = SubResource( 2 )

[node name="shield_sprite" type="Sprite" parent="shield/shield_collision"]
modulate = Color( 0.855469, 0.603929, 0.0701752, 1 )
position = Vector2( 0.18532, 0.86181 )
scale = Vector2( 0.321444, 0.340406 )
texture = ExtResource( 2 )

[node name="player_sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 3 )
animation = "walk_front"
frame = 2
playing = true

[node name="player_collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.397202, 0.397213 )
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 4 )

[node name="player_camera" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="player_catch1" type="Area2D" parent="."]
editor/display_folded = true
visible = false
modulate = Color( 0.699219, 0.0355072, 0.0355072, 1 )
position = Vector2( -239.252, 264.332 )
scale = Vector2( 0.213003, 0.160419 )
collision_layer = 4
collision_mask = 126
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_catch1"]
modulate = Color( 0.765625, 0.0448608, 0.0448608, 1 )
shape = SubResource( 5 )

[node name="player_catch2" type="Area2D" parent="."]
editor/display_folded = true
visible = false
modulate = Color( 0.699219, 0.0355072, 0.0355072, 1 )
position = Vector2( 228.585, 264.113 )
scale = Vector2( 0.213003, 0.160419 )
collision_layer = 4
collision_mask = 126
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_catch2"]
modulate = Color( 0.765625, 0.0448608, 0.0448608, 1 )
position = Vector2( 0, -42.5601 )
shape = SubResource( 5 )

[node name="player_hit" type="Area2D" parent="."]
editor/display_folded = true
visible = false
collision_mask = 9

[node name="player_collision_hit" type="CollisionShape2D" parent="player_hit"]
visible = false
modulate = Color( 0.379139, 0.910156, 0.0497742, 1 )
position = Vector2( 2.33825, -0.487671 )
shape = SubResource( 6 )

[node name="player_interface" type="CanvasLayer" parent="."]

[node name="health_bar" type="TextureProgress" parent="player_interface"]
margin_left = 1043.0
margin_top = 841.0
margin_right = 2323.0
margin_bottom = 1865.0
rect_scale = Vector2( 1, 0.2 )
min_value = 1.0
max_value = 28000.0
value = 1.0
texture_progress = ExtResource( 13 )
script = ExtResource( 14 )

[node name="ammo_bar" type="TextureProgress" parent="player_interface"]
margin_left = 1043.0
margin_top = 863.0
margin_right = 2323.0
margin_bottom = 1887.0
rect_scale = Vector2( 1, 0.2 )
max_value = 250.0
value = 1.0
texture_progress = ExtResource( 15 )
script = ExtResource( 16 )

[node name="health_label" type="RichTextLabel" parent="player_interface"]
margin_left = 950.0
margin_top = 838.0
margin_right = 2230.0
margin_bottom = 1862.0
custom_fonts/normal_font = SubResource( 7 )
text = "wake o'"

[node name="ammo_label" type="RichTextLabel" parent="player_interface"]
margin_left = 947.483
margin_top = 856.21
margin_right = 2227.48
margin_bottom = 1880.21
custom_fonts/normal_font = SubResource( 7 )
text = "ammo"

[node name="animation_trigger_shield" type="AnimationPlayer" parent="."]
anims/animation_shield = SubResource( 8 )

[node name="animation_trigger_enemies" type="AnimationPlayer" parent="."]
anims/enemies_backstep_attack = SubResource( 9 )

[node name="enemies_backstep" type="StaticBody2D" parent="."]
editor/display_folded = true
visible = false
collision_layer = 128
collision_mask = 8

[node name="enemies_backstep_collision" type="CollisionShape2D" parent="enemies_backstep"]
visible = false
shape = SubResource( 10 )

[node name="shot_1_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 18 )
volume_db = -18.0

[node name="player_hit_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 19 )
volume_db = 5.0

[node name="shot_up_spawn" type="Position2D" parent="."]
position = Vector2( 1.46303, -48.2798 )

[node name="shot_down_spawn" type="Position2D" parent="."]
position = Vector2( -0.487671, 42.9154 )

[node name="shot_right_spawn" type="Position2D" parent="."]
position = Vector2( 37.551, 0.975357 )

[node name="shot_left_spawn" type="Position2D" parent="."]
position = Vector2( -37.551, 0.487679 )

[connection signal="enemy_1_hit" from="." to="player_interface/health_bar" method="_on_player_enemy_1_hit"]
[connection signal="enemy_1_modified_hit" from="." to="player_interface/health_bar" method="_on_player_enemy_1_modified_hit"]
[connection signal="enemy_2_fire_hit" from="." to="player_interface/health_bar" method="_on_player_enemy_2_fire_hit"]
[connection signal="enemy_2_hit" from="." to="player_interface/health_bar" method="_on_player_enemy_2_hit"]
[connection signal="enemy_3_fire_hit" from="." to="player_interface/health_bar" method="_on_player_enemy_3_fire_hit"]
[connection signal="enemy_3_hit" from="." to="player_interface/health_bar" method="_on_player_enemy_3_hit"]
[connection signal="enemy_4_hit" from="." to="player_interface/health_bar" method="_on_player_enemy_4_hit"]
[connection signal="enemy_5_fire_hit" from="." to="player_interface/health_bar" method="_on_player_enemy_5_fire_hit"]
[connection signal="enemy_5_hit" from="." to="player_interface/health_bar" method="_on_player_enemy_5_hit"]
[connection signal="shield_1" from="." to="player_interface/ammo_bar" method="_on_player_shield_1"]
[connection signal="shoot_1" from="." to="player_interface/ammo_bar" method="_on_player_shoot_1"]
[connection signal="area_entered" from="player_hit" to="." method="_on_player_hit_area_entered"]
